adding reactive wallet connection to overlay and navbar

--- a/src/app.css
+++ b/src/app.css
@@ -23,34 +23,11 @@ body {
     }
 }
 
-
-#connect-wallet-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
-    background-color: rgba(13, 16, 24, 0.705);
-    z-index: 100;
-    padding: 0;
-    backdrop-filter: blur(3px);
-  }
-  
-
-.connect-wallet {
-    max-width: 500px;
-    border-radius: 10px;
-    margin: 0;
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    background-color: #2e2f3f54;
-    display: flex;
-    align-items: center;
-    padding: 25px;
-    flex-direction: column;
+.prevent-select {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
 }
 
 .fancy button {
