--- a/src/app.css
+++ b/src/app.css
@@ -13,6 +13,7 @@ body {
   height: 100vh;
   width: 100vw;
   margin: 0;
+  color: white;
 }
 
 
@@ -74,9 +75,60 @@ body {
 }
 
 
+
+.circular-button button {
+    background: #585eb6;
+    color: #ffffff;
+    width: 30px;
+    height: 30px;
+    border: none;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    cursor: pointer;
+    transition-duration: 300ms;
+    outline: none;
+    opacity: 30%;
+}
+
+.circular-button button:hover {
+    background: #767786;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
+    width: 60px;
+    border-radius: 10px;
+    opacity: 100%;
+}
+
+.circular-button button:active {
+    box-shadow: 0 0 4px #585eb6;
+}
+
 .show {
     display: flex;
 }
+
+
+/* This will affect the scrollbar globally */
+::-webkit-scrollbar {
+    width: 8px; /* width of the entire scrollbar */
+}
+
+::-webkit-scrollbar-track {
+    background: #141414e8; /* color of the tracking area */
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888888c2; /* color of the scroll thumb */
+    border-radius: 20px; /* roundness of the scroll thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555; /* color of the scroll thumb when hovering */
+}
+
+
 
 
 @keyframes fade-out {
